# vive-vio-scripts

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt  setup.sh
data/processed/matching_start_time/: arcore-pos-time.jsonl  tracker-ds1000-nozero.jsonl
docs/: tagtinyforvive.docx
libs/calibrate_vio_tracker/src/: main.cpp
libs/find_tag_space_poses/: CMakeLists.txt
libs/find_tag_space_poses/src/: find_tag_space_poses.cpp  pch.h
scripts/: align_trajectories.py  calibrate_tracker_and_vio.sh  clear-device-datasets.sh  disable_hmd_requirement.sh  downsample.sh  find_position_jumps.py  new_calibrate.sh  plot_distances.py  plot_positions.py  plot_tracker_and_device.py  preprocess-vio-data.sh  record_specific_tracker_frames.py  remove_skips.sh  report_connected_devices.sh  run_whole_pipeline.sh  tracker_start_recording.sh  vio_poses_to_camera_matrices.py  vio_poses_to_camera_matrices_fixed.py
scripts/adb/: pull-all-viotester-data-from-device.sh
scripts/plot/: plot_distances.py
scripts/tracker/: disable_hmd_requirement.sh  record_tracker_data.py
src/: calibrate.py  ovr_report_connected_devices.cpp  ovr_tracker_app.cpp  pch.h  poses.py  sync.py
